Fixed typos pointed out by DG Implementing comments from the reviewers

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2411,3 +2411,9 @@
   title = {{Personal communication}},
   year = {2016},
 }
+
+@misc{grove16,
+  author = {Grove, David},
+  title = {{Personal communication}},
+  year = {2016},
+}
