--- a/thesis.tex
+++ b/thesis.tex
@@ -22,10 +22,10 @@
 \title{\input{title}}
 \author{Daniele Cono D'Elia}
 \IDnumber{1208297}
-\course[Engineering in Computer Science]{Ingegneria Informatica}
+\course[Computer Engineering]{Ingegneria Informatica}
 \courseorganizer{School of Information Engineering, Computer Science and Statistics}
 \cycle{XXVIII}
-\submitdate{March 2016}
+\submitdate{June 2016}
 \copyyear{2016}
 \advisor{Prof. Camil Demetrescu}
 %\advisor{Dr. Nome Cognome}
