Added info on V8

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2417,3 +2417,9 @@
   title = {{Personal communication}},
   year = {2016},
 }
+
+@misc{titzer16,
+  author = {Titzer, Ben L.},
+  title = {{Personal communication}},
+  year = {2016},
+}
